# ddv

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _config.yml
.github/workflows/: build.yml  gh-pages.yml  release.yml
img/: demo.tape
src/: app.rs  client.rs  color.rs  config.rs  constant.rs  data.rs  error.rs  event.rs  help.rs  macros.rs  main.rs  util.rs  view.rs  widget.rs
src/view/: common.rs  help.rs  init.rs  item.rs  table.rs  table_insight.rs  table_list.rs  views.rs
src/widget/: loading_dialog.rs  scroll.rs  scroll_lines.rs  scroll_list.rs  table.rs
