[package]
name = "ddv"
version = "0.1.0"
description = "Terminal DynamoDB Viewer"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/ddv"
repository = "https://github.com/lusingander/ddv"
readme = "README.md"
license = "MIT"
keywords = ["dynamodb", "aws", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.87.0"

exclude = ["/.github", "/img"]

[dependencies]
ansi-to-tui = "7.0.0"
arboard = "3.5.0"
aws-config = "1.6.1"
aws-sdk-dynamodb = "1.71.2"
aws-smithy-types = "1.2.13"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.36", features = ["derive"] }
console = "0.15.11"
humansize = "2.1.3"
itsuki = "0.2.1"
once_cell = "1.21.3"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
smart-default = "0.7.1"
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
textwrap = "0.16.2"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
umbra = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
