[package]
name = "ddv"
version = "0.2.0"
description = "Terminal DynamoDB Viewer"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/ddv"
repository = "https://github.com/lusingander/ddv"
readme = "README.md"
license = "MIT"
keywords = ["dynamodb", "aws", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.87.0"

exclude = ["/.github", "/img"]

[dependencies]
ansi-to-tui = "7.0.0"
arboard = "3.6.1"
aws-config = "1.8.6"
aws-sdk-dynamodb = "1.93.0"
aws-smithy-types = "1.2.13"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
humansize = "2.1.3"
itsuki = "0.2.1"
once_cell = "1.21.3"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
rust_decimal = "1.38.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
smart-default = "0.7.1"
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
textwrap = "0.16.2"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
umbra = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
