[package]
name = "ddv"
version = "0.3.0"
description = "Terminal DynamoDB Viewer"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/ddv"
repository = "https://github.com/lusingander/ddv"
readme = "README.md"
license = "MIT"
keywords = ["dynamodb", "aws", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.88.0"

exclude = ["/.github", "/img"]

[dependencies]
ansi-to-tui = "8.0.0"
arboard = "3.6.1"
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.101.0"
aws-smithy-types = "1.3.5"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
humansize = "2.1.3"
itsuki = "0.2.1"
laurier = "0.3.0"
once_cell = "1.21.3"
ratatui = "0.30.0"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_with = "3.16.1"
smart-default = "0.7.1"
syntect = { version = "5.3.0", default-features = false, features = [
    "default-fancy",
] }
textwrap = "0.16.2"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
tui-input = "0.15.0"
umbra = "0.4.0"

[dev-dependencies]
rstest = "0.26.1"

[profile.release]
codegen-units = 1
lto = true
